# feedback-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  messages.yml  pyproject.toml
.github/workflows/: tests.yml
feedback_bot/: __main__.py  chat_repository.py  main.py  models.py  utils.py
tests/: test_sqlite_chat_repository.py
texts/: forwarded_to_owner.txt  forwarded_to_user.txt  start.txt
