[tool.poetry]
name = "feedback-bot"
version = "0.1.0"
description = "Telegram Feedback Bot"
authors = ["Dmitry <dmitrydavis@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
pytest = "^6.2.0"
pytest-asyncio = "^0.15.0"
pytest-cov = "^2.12.0"

[tool.black]
target_version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
